--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This is a git repo
+To begin, we have the euler equations in 1D Cartesian (Completed)
+We will move to cylindrical coordinates in 2D (In Process)
+Then add to the streamer Code (Not yet)
