--- a/README
+++ b/README
@@ -7,3 +7,42 @@ To begin, we have the euler equations in 1D Cartesian (Completed)
 
 We will move to cylindrical coordinates in 2D (In Process)
 Then add to the streamer Code (Not yet)
+
+
+To begin:
+
+(1)
+
+Clone the working repository. In the right hand corner of the screen there is a green "Code" tab. Copy either the HTML or SSH, depending on how you have git set up on your computer. Type into command line:
+
+          git clone _name of repository_
+
+(2)
+
+Make update to code with text editor of your choice and save.
+
+(3)
+
+Type "git diff" and hit Enter to check that you typed everything properly
+
+(4)
+
+Type "git status" and hit Enter to see if ref.bib was indeed modified
+
+(5)
+
+Then add your changes by typing "git add -A". Hit Enter.
+
+(6)
+
+Then type "git commit -m "message". In the message, write the author(etAl)year of all the papers you added.
+
+(7)
+
+Type "git pull origin main" and hit Enter.
+
+The most commonly forgotten step, and perhaps the most important, is to pull from the original working directory. This is so that in the unlikely chance someone has made changes in the time that you are modifying the document, you will be updating the most recent document.
+
+(8)
+
+Type "git push origin main" and hit Enter.
