new image wHHEFIX, and changes to doc

--- a/writeUps/SolvingHyperbolicSystems_Doc/EulerEquations.tex
+++ b/writeUps/SolvingHyperbolicSystems_Doc/EulerEquations.tex
@@ -231,7 +231,7 @@
 			\right.					
 			\end{aligned}
 		\end{equation}
-		For a given point (x,t) there is an eigenvalue $ \lambda_I $ such that $ \lambda_I < \frac{x}{t} < \lambda_{I+1}$, which implies that $ x - \lambda_i t > 0 /forall i$ such that $ i \leq I$. So, we can now write the solution to the Riemann Problem in terms of the original variables as 
+		For a given point $ (x,t)$ there is an eigenvalue $ \lambda_I $ such that $ \lambda_I < \frac{x}{t} < \lambda_{I+1}$, which implies that $ x - \lambda_i t > 0 \mbox{ } \forall i \mbox{ }| \mbox{ } i \leq I$. So, we can now write the solution to the Riemann Problem in terms of the original variables as 
 		\begin{equation}
 			U(x,t) = \sum_{i = I+1}^{m} \alpha_i K^{(i)} + \sum_{i = 1}^{I} \beta_i K^{(i)},
 		\end{equation}where the integer $ I = I(x,t) $ is the maximum value of the sub-index $ i $ for which $ x - \lambda_i t > 0 $.
